@@ -1,4 +1,4 @@
 
 [('authors.html', "Who's who?"),
- 
+ ('attic/', "Old stuff"),
  ] 
