@@ -46,3 +46,7 @@ send announcements for this list.
 href="http://mail.gnu.org/archive/html/info-lilypond/">
 http://mail.gnu.org/archive/html/info-lilypond/</a>.
 
+
+<p>
+LilyPond is dedicated to our friends!
+<p>
