@@ -1,6 +1,7 @@
 
 [('screenshots.html', 'Screenshots'),
  ('features.html', 'Features'),
+ ('why/', "Why"),
  ('faq.html', 'FAQ'),
  ('pubs.html', 'Publications'),
  ('news/', 'News'),
